<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ChooseXO">

        <ImageView
            android:contentDescription="@string/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg4neon" />


        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/arrow1"
            android:layout_width="wrap_content"
            android:shadowColor="@color/pink3"
            android:shadowDx="0"
            android:shadowDy="0"
            android:fontFamily="monospace"
            android:shadowRadius="20"
            android:textColor="@color/pink3"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="40sp"
            android:text="@string/back"
            />

        <TextView
            android:id="@+id/select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:fontFamily="monospace"
            android:shadowColor="@color/pink3"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/select"
            android:textColor="@color/pink3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/select"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:buttonTint="@color/green1"
                android:fontFamily="monospace"
                android:paddingLeft="10dp"
                android:shadowColor="@color/green1"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:text="@string/zero"
                android:textColor="@color/green1"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

            <RadioButton
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/green1"
                android:fontFamily="monospace"
                android:paddingLeft="10dp"
                android:shadowColor="@color/green1"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:text="@string/cross"
                android:textColor="@color/green1"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />
        </RadioGroup>

        <TextView
            android:id="@+id/whoWillStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:shadowColor="@color/pink3"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/whoWillStart"
            android:textColor="@color/pink3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/whoWillStart"
            android:layout_centerHorizontal="true"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:buttonTint="@color/green1"
                android:fontFamily="monospace"
                android:paddingLeft="10dp"
                android:shadowColor="@color/green1"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="15"
                android:text="@string/yes"
                android:textColor="@color/green1"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

            <RadioButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/green1"
                android:fontFamily="monospace"
                android:paddingLeft="10dp"
                android:shadowColor="@color/green1"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="15"
                android:text="@string/no"
                android:textColor="@color/green1"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />
        </RadioGroup>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:background="@drawable/buttonborder">

            <TextView
                android:id="@+id/play"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:shadowColor="@color/pink3"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:text="@string/play"
                android:textAllCaps="true"
                android:textColor="@color/pink3"
                android:textSize="30sp"
                android:textStyle="bold" />
        </FrameLayout>
    </RelativeLayout>
