<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EnterNames"
        tools:ignore="ScrollViewSize">

        <ImageView
            android:contentDescription="@string/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg4neon"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:shadowColor="@color/pink3"
            android:shadowDx="0"
            android:shadowDy="0"
            android:fontFamily="monospace"
            android:shadowRadius="20"
            android:textColor="@color/pink3"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="40sp"
            android:text="@string/back"
            />

        <LinearLayout
            android:id="@+id/playerA"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="70dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="20dp"
                android:fontFamily="monospace"
                android:text="@string/cross"
                android:shadowColor="@color/magenta"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:textColor="@color/magenta"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="monospace"
                android:text="@string/player1"
                android:shadowColor="@color/pink3"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:textColor="@color/pink3"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>


        <EditText
            android:layout_marginLeft="16dp"
            android:id="@+id/player1"
            android:layout_below="@id/playerA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/pink3"
            android:fontFamily="monospace"
            android:hint="@string/EnterName"
            android:textColorHint="@color/green1"
            android:shadowColor="@color/green1"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:inputType="text"
            android:textColor="@color/green1"
            android:textSize="20sp"
            tools:ignore="Autofill,UnusedAttribute" />


        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_below="@id/player1"
            android:id="@+id/playerB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:fontFamily="monospace"
                android:text="@string/zero"
                android:shadowColor="@color/blue1"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:textColor="@color/blue1"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="monospace"
                android:text="@string/player2"
                android:shadowColor="@color/pink3"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:textColor="@color/pink3"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>


        <EditText
            android:layout_marginLeft="16dp"
            android:layout_below="@id/playerB"
            android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/pink3"
            android:fontFamily="monospace"
            android:hint="@string/EnterName"
            android:textColorHint="@color/green1"
            android:shadowColor="@color/green1"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:inputType="text"
            android:textColor="@color/green1"
            android:textSize="20sp"
            tools:ignore="Autofill,UnusedAttribute" />

        <FrameLayout
            android:layout_below="@id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttonborder">

        <TextView
            android:id="@+id/play1"
           android:textAllCaps="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/play"
            android:background="?android:attr/selectableItemBackground"
            android:shadowColor="@color/pink3"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:textColor="@color/pink3"
            android:textSize="30sp"
            android:textStyle="bold" />
        </FrameLayout>

    </RelativeLayout>
</ScrollView>