<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/bg"
        android:scaleType="centerCrop"
        android:src="@drawable/bg1neon" />

    <TextView
        android:id="@+id/NameOfTheGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"

        android:text="@string/app_name"
        android:textColor="@color/pink3"
        android:shadowColor="@color/pink3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="50"
        android:textAllCaps="true"
        android:textSize="99sp"
        android:textStyle="bold" />


    <FrameLayout
        android:id="@+id/SinglePlayerFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NameOfTheGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonborder"
       >


        <TextView
            android:id="@+id/SinglePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/SinglePlayer"
            android:shadowColor="@color/pink3"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="40"
            android:textColor="@color/pink3"
            android:textSize="30sp"
            android:textStyle="bold" />


    </FrameLayout>


    <FrameLayout
        android:id="@+id/TwoPlayerFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SinglePlayerFrame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonborder"
       >


        <TextView
            android:id="@+id/TwoPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/TwoPlayer"
            android:shadowColor="@color/pink3"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="40"
            android:textColor="@color/pink3"
            android:textSize="30sp"
            android:textStyle="bold" />

    </FrameLayout>


</RelativeLayout>